# gtm-okr

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: main.rs
