[package]
name = "gtm-okr"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walsh <patrick.walsh@ironcorelabs.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to get goals from GTMHub"
readme = "README.md"
homepage = "https://github.com/zmre/gtm-okr"
repository = "https://github.com/zmre/gtm-okr"
keywords = ["cli", "goals", "okrs"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ctrlc = "3.2.0"
confy = "0.4.0"
log = "0.4"
simplelog = "^0.10.0"
text_io = "0.1.9"
clap-verbosity-flag = "0.3.2"
chrono = "^0.4"
# chrono-english = "^0.1"

[dev-dependencies]
tokio-test = "0.4.2"

